--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -1,56 +1,65 @@
-html, body, #fg, #bg {
-  width:100%;
-  height:100%;
-  color:#fff;
-  font-size:35px;
-  font-family:'Montserrat', sans-serif;
-  overflow:hidden;
+body {
+  background: #dfdddd9a;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+.slider {
+  padding: 50px 0 0 0;
+  margin: 0 auto;
+  &__body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__prev {
+    margin: 0 10px 0 0;
+  }
+
+  &__next {
+    margin: 0 0 0 10px;
+  }
+  &__container {
+    overflow: hidden;
+  }
+
+  &__track {
+    display: flex;
+    width: 608px;
+    transition: 0.3s;
+  }
+
+  &__slide {
+    min-width: 100px;
+    height: 100px;
+    margin: 0 10px;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding: 16px;
+    img {
+      margin: 20px 0 0 0;
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+}
+.btn {
+  height: 30px;
+  width: 30px;
+  -webkit-writing-mode: horizontal-tb !important;
+  -webkit-appearance: button;
+  border-radius: 50%;
+  border: none;
+  background-color: #ffffff;
+  box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04),
+    0px 0px 1px rgba(0, 0, 0, 0.04);
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
-div {
-  position:absolute;
-  top:0;
+.active {
+  background-color: #a04633;
 }
-
-sub {
-  font-size:12px;
-  display:block;
-}
-
-p {
-  padding:12px;
-}
-
-
-// *,
-// ::before,
-// ::after {
-//   box-sizing:border-box
-// }
-
-// .wrapper {
-//   width: 600px;
-//   margin: 0 auto;
-// }
-
-// .slider-container {
-//   overflow: hidden;
-//   background-color:pink;
-// }
-// .slider-track {
-//   display: flex;
-//   background-color:yellow;
-//   transition: .2s;
-// }
-// .slider-item {
-//   height: 100px;
-//   min-width: 200px;
-  
-// }
-// .slider-item:nth-child(3n+1) {background-color:red;}
-// .slider-item:nth-child(3n+2) {background-color:green;}
-// .slider-item:nth-child(3n+3) { background-color:blue;}
-
-// .slider-buttons {
-//   text-align: center;
-// }
