--- a/src/scss/calc.scss
+++ b/src/scss/calc.scss
@@ -18,13 +18,20 @@
   justify-items: end;
   align-items: end;
   margin-bottom: 25px;
-  p {text-align: right; 
-    font-size: 4rem;
-    margin: 0;
-    }
+  // p {text-align: right; 
+  //   font-size: 4rem;
+  //   margin: 0;
+  //   }
 }
 
-.buttons {
+.result  {
+  font-size:1.5rem;
+  height:3rem;
+  
+}
+
+
+.buttons  {
   display: grid;
   grid-template-areas: 
   "ac plus-minus percent division"
@@ -37,7 +44,7 @@
 }
 
 
-.btn {
+ .btn {
 width: 60px;
 height: 60px;
 background: #333;
@@ -47,6 +54,7 @@ line-height: 60px;
 font-size: 1.5rem;
 cursor: pointer;
 user-select: none;
+border:none;
 }
 
 .btn.zero {
